2203/review/out
BD Software STL Message Decryptor v3.10 for gcc 2/3/4
sort.cc: In function ‘int main()’:
sort.cc:19:1: error: ‘ostream_iterator’ was not declared in this scope
ostream_iterator<int> out(cout, ", ");
^~~~~~~~~~~~~~~~
sort.cc:19:1: ‘ostream_iterator’ is defined in header ‘<iter>’; did you
    forget to ‘#include <iter>’?
sort.cc:5:1:
+#include <iter>
sort.cc:19:1:
ostream_iterator<int> out(cout, ", ");
^~~~~~~~~~~~~~~~
sort.cc:19:18: error: expected primary-expression before ‘int’
ostream_iterator<int> out(cout, ", ");
^~~
sort.cc:20:27: error: ‘out’ was not declared in this scope
copy (v.begin(), v.end()-1, out);
^~~
sort.cc:20:27: suggested alternative: ‘putw’
copy (v.begin(), v.end()-1, out);
^~~
putw
